# toy-http-application

./: .gitignore  CMakeLists.txt  readme.md  result.h
cmake-utility/: auto_add_subdirectory.cmake  fetch_proto.cmake
examples/: CMakeLists.txt  main.cpp
examples/controller/: hello.h
examples/model/: test.cpp  test.h
examples/service/: memcache.h
http-app/common/: macro_utility.h  result.h
http-app/framework/: controller_base.cpp  controller_base.h  http_application.cpp  http_application.h  model_base.cpp  model_base.h  service_base.cpp  service_base.h
